refactor(cinema-hall): optimise mapper and service for cinema hall module